QMetaObject::normalizeType:  fix uses of const and template.

'const' was not removed from templated class
This even fixes compilation errors if using const return templated types

We can change the normalized signature in Qt 4.7 as it has already changed
and we have code to check that if moc revision < 5 it will
renormalize all the symbols
cf commit b881d8fb99972f1bd04ab4c84843cc8d43ddbeed

Task-number: QTBUG-7421
Reviewed-by: Brad
Reviewed-by: Kent Hansen